--- a/practice.env
+++ b/practice.env
@@ -36,3 +36,25 @@ my-app/
 ├── tailwind.config.js
 ├── tsconfig.json
 └── package.json
+
+
+
+
+
+
+
+
+
+
+
+//component vs page relation:
+
+src/
+├── pages/
+│   └── Login/
+│       ├── LoginPage.tsx      <-- Full route page component
+│       └── LoginForm.tsx      <-- Subcomponent (if not reused)
+├── components/
+│   └── ui/
+│       ├── Input.tsx          <-- Reusable input field
+│       └── Button.tsx         <-- Reusable button
