--- a/practice.env
+++ b/practice.env
@@ -58,3 +58,24 @@ src/
 │   └── ui/
 │       ├── Input.tsx          <-- Reusable input field
 │       └── Button.tsx         <-- Reusable button
+
+
+
+src/
+│
+├── assets/
+│   ├── images/         <-- সকল static images (JPG, PNG, WebP)
+│   │   ├── hero/
+│   │   ├── logos/
+│   │   └── products/
+│   │
+│   ├── icons/          <-- SVG or icon components
+│   │   ├── social/
+│   │   ├── ui/
+│   │   └── nav/
+│   │
+│   └── illustrations/  <-- decorative illustrations or figures
+│
+├── components/
+│
+└── pages/
