--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ REACT_APP_API_URL=http://localhost:3000/api/v1
 
 VITE_BASIC_MONTHLY=price_1S1hbwFzpnTw3rJaAbCdEfGh  
 
-VITE_BASIC_YEARLY=
+VITE_BASIC_YEARLY=price_1S23yHFzpnTw3rJa5GqXUdoJ
 
-VITE_PRO_MONTHLY=
+VITE_PRO_MONTHLY=price_1S29FpFzpnTw3rJaszKjg91k
 
-VITE_PRO_YEARLY=
+VITE_PRO_YEARLY=price_1S29GvFzpnTw3rJaxwJ8ZzEy
