--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_REACT_APP_API_URL=http://localhost:3000/api/v1
+VITE_REACT_APP_API_URL=http://65.49.81.27:5000/api/v1
 
 VITE_BASIC_MONTHLY=price_1S1hbwFzpnTw3rJaAbCdEfGh  
 
