--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host 0.0.0.0 --port 3000",
+    "start": "next start -p 3000",
     "start:prod": "vite preview --port 3000 --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
