--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VITE_REACT_APP_API_URL=http://65.49.81.27:5000/api/v1
+VITE_REACT_APP_API_URL=http://localhost:5000/api/v1
+# VITE_REACT_APP_API_URL=http://65.49.81.27:5000/api/v1
 
 VITE_BASIC_MONTHLY=price_1S1hbwFzpnTw3rJaAbCdEfGh  
 
@@ -8,4 +9,4 @@ VITE_PRO_MONTHLY=price_1S29FpFzpnTw3rJaszKjg91k
 
 VITE_PRO_YEARLY=price_1S29GvFzpnTw3rJaxwJ8ZzEy
 
-VITE_AI_API=http://65.49.81.27:8000/ai-api/v1
+VITE_AI_API=http://65.49.81.27:8000/ai-api/v1/generate
