--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ VITE_PRO_MONTHLY=price_1S29FpFzpnTw3rJaszKjg91k
 
 VITE_PRO_YEARLY=price_1S29GvFzpnTw3rJaxwJ8ZzEy
 
-VITE_AI_API=http://65.49.81.27:8000/ai-api/v1/generate
+VITE_AI_API=http://65.49.81.27:8000/generate
