--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# VITE_REACT_APP_API_URL=http://localhost:5000/api/v1
-VITE_REACT_APP_API_URL=http://65.49.81.27:5000/api/v1
+VITE_REACT_APP_API_URL=http://localhost:5000/api/v1
+# VITE_REACT_APP_API_URL=http://65.49.81.27:5000/api/v1
 
 VITE_BASIC_MONTHLY=price_1S1hbwFzpnTw3rJaAbCdEfGh  
 
