--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host 0.0.0.0 --port 3000",
-    "start": "next start -p 3000",
-    "start:prod": "vite preview --port 3000 --host",
+    "dev": "vite",
+    "start": "vit start ",
+    "start:prod": "vite preview ",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
