--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-      # VITE_REACT_APP_API_URL: https://reelty.com.au/api/v1
-      # VITE_BASIC_MONTHLY: price_1S1hbwFzpnTw3rJaAbCdEfGh  
-      # VITE_BASIC_YEARLY: price_1S23yHFzpnTw3rJa5GqXUdoJ
-      # VITE_PRO_MONTHLY: price_1S29FpFzpnTw3rJaszKjg91k
-      # VITE_PRO_YEARLY: price_1S29GvFzpnTw3rJaxwJ8ZzEy
-      # VITE_AI_API: https://reelty.com.au/ai
+      VITE_REACT_APP_API_URL: https://reelty.com.au/api/v1
+      VITE_BASIC_MONTHLY: price_1S1hbwFzpnTw3rJaAbCdEfGh  
+      VITE_BASIC_YEARLY: price_1S23yHFzpnTw3rJa5GqXUdoJ
+      VITE_PRO_MONTHLY: price_1S29FpFzpnTw3rJaszKjg91k
+      VITE_PRO_YEARLY: price_1S29GvFzpnTw3rJaxwJ8ZzEy
+      VITE_AI_API: https://reelty.com.au/ai
 
     #   "http://localhost:3000",
     # "http://65.49.81.27:3000",
@@ -11,12 +11,12 @@
     # "https://www.reelty.com.au",
     # "http://localhost:8080"
     # "http://65.49.81.27:5000/api/v1"
-      VITE_REACT_APP_API_URL: http://65.49.81.27:5000/api/v1
-      VITE_BASIC_MONTHLY: price_1S1hbwFzpnTw3rJaAbCdEfGh  
-      VITE_BASIC_YEARLY: price_1S23yHFzpnTw3rJa5GqXUdoJ
-      VITE_PRO_MONTHLY: price_1S29FpFzpnTw3rJaszKjg91k
-      VITE_PRO_YEARLY: price_1S29GvFzpnTw3rJaxwJ8ZzEy
-      VITE_AI_API: http://65.49.81.27:8000/generate
+      # VITE_REACT_APP_API_URL: http://65.49.81.27:5000/api/v1
+      # VITE_BASIC_MONTHLY: price_1S1hbwFzpnTw3rJaAbCdEfGh  
+      # VITE_BASIC_YEARLY: price_1S23yHFzpnTw3rJa5GqXUdoJ
+      # VITE_PRO_MONTHLY: price_1S29FpFzpnTw3rJaszKjg91k
+      # VITE_PRO_YEARLY: price_1S29GvFzpnTw3rJaxwJ8ZzEy
+      # VITE_AI_API: http://65.49.81.27:8000/generate
 
       #   VITE_REACT_APP_API_URL: http://65.49.81.27:5000/api/v1
       # VITE_BASIC_MONTHLY: price_1S1hbwFzpnTw3rJaAbCdEfGh  
