--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.13.2",
     "dayjs": "^1.11.18",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
@@ -22,6 +23,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.7.0",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
